workloads/pg-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-pg-cluster
