workloads/app-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rpg-test
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-server
  name: app-server
  namespace: rpg-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-server
  template:
    metadata:
      labels:
        app: app-server
    spec:
      serviceAccountName: app-server
      containers:
      - name: app-server
        image: demoapp88985792.azurecr.io/app-server:latest
        imagePullPolicy: Always
        args:
        - --addr=grpc-fight.rpg-test.svc.cluster.local:8001
        - --auth-server-addr=grpc-auth.rpg-test.svc.cluster.local:6666
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-server
  namespace: rpg-test
spec:
  type: ClusterIP
  ports:
  - name: app-server
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: app-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: auth-server
  name: auth-server
  namespace: rpg-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      serviceAccountName: auth-server
      containers:
      - name: auth-server
        image: demoapp88985792.azurecr.io/auth-server:latest
        imagePullPolicy: Always
        args:
        - --issuer=https://rpg-game.eastus.cloudapp.azure.com/dex/dex
        - --port=5555
        - --grpc-port=6666
        - --redirect-uri=https://rpg-game.eastus.cloudapp.azure.com/auth/callback
        - --client-id=new-test-id
        ports:
        - name: http
          containerPort: 5555
        - name: grpc
          containerPort: 6666
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: rpg-test
spec:
  type: ClusterIP
  ports:
  - name: auth-server
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: auth-server
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-fight
  namespace: rpg-test
spec:
  type: ClusterIP
  ports:
  - name: fight-server
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: fight-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fight-server
    version: fight-server-v1
  name: fight-server-v1
  namespace: rpg-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fight-server
      version: fight-server-v1
  template:
    metadata:
      labels:
        app: fight-server
        version: fight-server-v1
    spec:
      serviceAccountName: fight-server
      containers:
      - name: fight-server
        image: demoapp88985792.azurecr.io/fight-server:latest
        imagePullPolicy: Always
        ports:
        - name: grpc
          containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fight-server
    version: fight-server-v2
  name: fight-server-v2
  namespace: rpg-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fight-server
      version: fight-server-v2
  template:
    metadata:
      labels:
        app: fight-server
        version: fight-server-v2
    spec:
      serviceAccountName: fight-server
      containers:
      - name: fight-server
        image: demoapp88985792.azurecr.io/fight-server:betav1
        imagePullPolicy: Always
        ports:
        - name: grpc
          containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: rpg-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex # This is created below
      containers:
      - image: dexidp/dex:v2.27.0
        imagePullPolicy: Always
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        ports:
        - name: http
          containerPort: 5556
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
      volumes:
      - name: config
        configMap:
          name: dex
          items:
          - key: config.yaml
            path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: rpg-test
spec:
  type: ClusterIP
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: dex
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-auth
  namespace: rpg-test
spec:
  type: ClusterIP
  ports:
  - name: auth-server
    port: 6666
    protocol: TCP
    targetPort: 6666
  selector:
    app: auth-server
