workloads/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: rpg-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend
      containers:
      - name: frontend
        image: tqhuang2021/frontend@sha256:eca0695609c684fd03845ecca23c184118ad0f6a5962641a712282be5701b30b
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: rpg-test
spec:
  type: ClusterIP
  ports:
  - name: frontend
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
