workloads/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo
  namespace: rpg-test
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "rpg-game.eastus.cloudapp.azure.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: rpg-game-tls-secret
    hosts:
    - "rpg-game.eastus.cloudapp.azure.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-server
  namespace: rpg-test
spec:
  hosts:
  - "rpg-game.eastus.cloudapp.azure.com"
  gateways:
  - demo
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /dist
    - uri:
        prefix: /static
    - uri:
        prefix: /manifest
    route:
    - destination:
        host: frontend.rpg-test.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        exact: /session
    - uri:
        exact: /heros
    - uri:
        exact: /admin/hero
    - uri:
        exact: /session/fight
    - uri:
        exact: /session/archive
    - uri:
        exact: /session/level
    - uri:
        exact: /session/quit
    - uri:
        exact: /session/clear
    route:
    - destination:
        host: app-server.rpg-test.svc.cluster.local
        port:
          number: 8000
  - match:
    - uri:
       exact: /passcode
    - uri:
       exact: /auth/callback
    - uri:
       exact: /login
    route:
    - destination:
        host: auth-server.rpg-test.svc.cluster.local
        port:
          number: 5555
  - match:
    - uri:
        prefix: /dex
    route:
      - destination:
          host: dex.rpg-test.svc.cluster.local
          port:
            number: 5556
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: auth
  namespace: rpg-test
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-fight
  namespace: rpg-test
spec:
  host: grpc-fight.rpg-test.svc.cluster.local
  subsets:
  - name: fight-server-v1
    labels:
      version: fight-server-v1
  - name: fight-server-v2
    labels:
      version: fight-server-v2
  trafficPolicy:
    connectionPool:
      tcp:
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
      http:
        idleTimeout: 30m
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fight-server
  namespace: rpg-test
spec:
  hosts: 
  - grpc-fight.rpg-test.svc.cluster.local
  http:
  - match:
    - headers:
        user-type:
          exact: admin
    route:
    - destination:
        host: grpc-fight.rpg-test.svc.cluster.local
        subset: fight-server-v2
  - route:
    - destination:
        host: grpc-fight.rpg-test.svc.cluster.local
        subset: fight-server-v1
